- Added missing ref  - Added spaces in front of citep

--- a/sections/Sensors/sensorTheory.tex
+++ b/sections/Sensors/sensorTheory.tex
@@ -20,7 +20,7 @@ number of rectangles. Such a representation can be seen in
 For each identified rectangle, the camera will output the coordinates for that
 rectangle's sides, top, bottom and colour. 
 
-Below are the technical specifications\citep[p. 1]{NXTCam} for the camera.
+Below are the technical specifications \citep[p. 1]{NXTCam} for the camera.
 \begin{itemize}
   \item Tracks up to 8 targets
   \item Analyzes at 30 frames per second
@@ -34,7 +34,8 @@ Below are the technical specifications\citep[p. 1]{NXTCam} for the camera.
 For the purpose of measuring the distance to the chosen target, the turret will
 make use of two ultrasonic sensors. These sensors work by producing sound waves
 from one of two frontal holes, which is then bounced back by an object and
-received by the second hole. An image of this sensor can be seen in \autoref{}.
+received by the second hole. An image of this sensor can be seen in
+\autoref{UltrasoundPic}.
 The delay between producing and receiving the sound wave is used to determine
 the distance to a given object.
 
@@ -42,7 +43,7 @@ the distance to a given object.
 on the turret.}
 
 The described sensor is a standardized ultrasonic sensor from Lego NXT. The
-sensor's technical specifications\citep{Ultrasonic_sensor} can be found below.
+sensor's technical specifications \citep{Ultrasonic_sensor} can be found below.
 \begin{itemize}
   \item Has a max range of 2.5m
   \item Has a precision of +/- 3cm
