Minor changes to RTS Moved Physics to Analysis

--- a/sections/Analyse/SystemDescription/RTS.tex
+++ b/sections/Analyse/SystemDescription/RTS.tex
@@ -6,33 +6,31 @@ is:
 \begin{center}
 \begin{minipage}{0.8\linewidth}
 \textit{A real time system is any information processing system, which needs to
-react within a finite time period to externally generated inputs to meet its
-deadlines.}
+react within a finite time period to externally generated inputs in order meet
+its deadlines.}
 \end{minipage}
 \end{center}
-
-
 
 % Although the project group does not have any members following the Real-Time
 % Systems (RTS) course, the project still incorporates certain elements from RTS.
 % In this section a quick overview of the elements will be described in order to provide a basic
 % understanding in relation to the project.
 
-
 \subsection{Timeliness}
-Timeliness is an important term within real time systems. It is defined as being
-a function of the total system, for example a missile guidance system requires
-the input data within a few milliseconds. This means that for all real time
-systems the concept of timeliness is relative to the project - which makes sense since the only thing
-to care about is whether or not the deadlines are met \Source.
+Timeliness 
+
+Timeliness is defined as being a function of the total system, for example a
+missile guidance system requires the input data within a few milliseconds. This
+means that for all real time systems the concept of timeliness is relative to
+the project - which makes sense since the only thing to care about is whether
+or not the deadlines are met \Source.
 
 \subsection{Deadlines}
 As mentioned in the definition, real time systems are concerned about
-deadlines in a system.
-The real time system gets classified depending on the consequences of not
-meeting a deadline. If the result of a failed deadline is catastrophic, the
-system gets classified as a hard real time system - examples of such are control
-systems for airplanes, nuclear power plants, etc \Source.
+deadlines in a system. The real time system gets classified depending on the
+consequences of not meeting a deadline. If the result of a failed deadline is
+catastrophic, the system gets classified as a hard real time system - examples
+of such are control systems for airplanes, nuclear power plants, etc \Source.
 If an occasional deadline is missed, or the system doesn't shut down if a
 deadline is missed, it might be a soft real time system, for example
 video-conferencing software the result of a missed deadline might be dropped
