--- a/sections/Analyse/SystemDescription/MI.tex
+++ b/sections/Analyse/SystemDescription/MI.tex
@@ -172,6 +172,12 @@ project is limited by the scope of the project. For example one could imagine
 the prioritizing of different targets according to a complex preference
 
 \subsubsection{Number of Agents}
+Reasoning with multiple agents can be hard. This is due to the fact that an
+agent must take into account the other agents goals and preferences and reason
+strategically about these. It can also be advantageous to ignore the other
+agents if their behavior is not impacted by what the agent does.
+\namep uses only a single agent due to the fact that their only is a single
+agent so it does not need to take any other agents into account.
 
 \subsubsection{Belief Network}
 A belief network is an acyclic directed graph consisting of random variables and
