--- a/sections/Sensors/Sensors.tex
+++ b/sections/Sensors/Sensors.tex
@@ -1,4 +1,4 @@
-\chapter{Sensors}\label{sensors}
+% \chapter{Sensors}\label{sensors}
 In order for the autonomous turret to be able to percieve the world around it,
 it needs to make use of external peripherals, which throughout this report will
 be known as sensors. These sensors are used to gather data about the various
