Changed the placement of distance test and added a file to appendix

--- a/setup/chapters.tex
+++ b/setup/chapters.tex
@@ -7,6 +7,7 @@
 \input{sections/Analyse/SystemDescription/RTS.tex}
 \input{sections/Analyse/SystemDescription/Conclusion.tex}
 \input{sections/PhysTheory/ProjectilePhysics.tex}%Physics of shooting
+\input{sections/Testing/Testing.tex}
 \input{sections/Analyse/PlatformChoice.tex}%NXT v. Arduino
 \input{sections/Sensors/Sensors.tex}
 
@@ -21,7 +22,7 @@
 
 
 \part{Testing}
-\input{sections/Testing/Testing.tex}%Physics of shooting
+%Physics of shooting
 %Turret design choises
 %	Different itterations of the turret
 %Testing
