--- a/sections/Analyse/SystemDescription/MI.tex
+++ b/sections/Analyse/SystemDescription/MI.tex
@@ -2,9 +2,9 @@
 
 As \name is an autonomous turret and needs to be able to hit a moving target,
 it needs to have some intelligence in order to determine how best to hit the
-target. The turret can be considered intelligent when its decisions
-are explainable by computations while its intelligence can be judged
-by\cite{MIBook}:
+target. The turret can be considered intelligent \citep[ch.1.1]{MIBook} when its
+decisions are explainable by computations while its intelligence can be judged
+by:
 
 \begin{enumerate}
   \item If what it does is appropriate to its circumstances and goals.
@@ -25,16 +25,18 @@ As \name is a turret it needs to be able to convert the problem of hitting a
 moving target into a suitable representation. The representation can then be
 computed into a suitable output, which can be interpreted as a solution.
 
-%(Consider using fig1.4 p12)
+\figx[0.8]{MIRep}{An illustration of how a problem is converted into a solution
+\citep[Chap. 1.4]{MIBook}}
 
-The representation of a peice of knowledge is the internal representation of the
-knowledge, and is part of the knowledge base, which is all the knowledge stored
-in the agent. The form of this knowledge is represented in a representation
-scheme\cite{MIBook}. An example of the knowledge that \name should have is 
-knowledge about the movement of the target, the vertical angle of the canon and
-the horisontal angle of the turret in a way that makes it possible to compute an
-output. Whether this output is a solution or not, depends on what a sufficient
-solution is. Generally there are 4 different categories of solutions:
+The representation is a piece of specific knowledge from the representation
+scheme. The representation scheme is used to make sure the individual
+representations are detailed and close to the problem, such that the necessary
+knowledge can be used to solve the problem\citep{MIBook}. Some examples of the
+knowledge that \name should have is: Knnowledge of the targets speed and
+direction and knowledge of what direction it is facing. This knowledge, along
+with more, should be used in a way that makes it possible to compute an output.
+Whether this output is a solution or not, depends on what a sufficient solution
+is. Generally there are 4 different categories of solutions:
 
 \begin{itemize}
   \item Optimal solution - The best possible solution to the problem.
@@ -49,23 +51,12 @@ solution is. Generally there are 4 different categories of solutions:
 As \name is shooting on a moving target. The solution needs to be reliable able
 to hit the target, but as it is a real-time system there are certain limits to
 how much time can be spent searching and waiting for the optimal shot.
-\fix{Do we need to discuss which solution type we use?}{}
-
 
 \subsection{Design Space}
 The design space is defined by a series of 8 factors, which are used to give an
-estimation of the system. These factors are:
-
-\begin{itemize}
-   \item Modularity
-   \item Representation scheme
-   \item Planning horizon
-   \item Uncertainty
-   \item Preference
-   \item Number of agents
-   \item Learning
-   \item Computational limits
-\end{itemize}
+estimation of the system. These factors are: modularity, representation scheme,
+planning horizon, uncertainty, preference, number of agents, learning and
+computational limits.
 
 \subsubsection{Modularity}
 Modularity describes how easily the system can be divided into modules, as well
