--- a/sections/Analyse/SystemDescription/MI.tex
+++ b/sections/Analyse/SystemDescription/MI.tex
@@ -23,7 +23,8 @@ a suitable way that allows it to work it into a suitable solution.
 
 As \name is a turret it needs to be able to convert the problem of hitting a
 moving target into a suitable representation. The representation can then be
-computed into a suitable output, which can be interpreted as a solution.
+computed into a suitable output, which can be interpreted as a solution,
+presuma.
 
 \figx[0.8]{MIRep}{An illustration of how a problem is converted into a solution
 \citep[Chap. 1.4]{MIBook}}
