--- a/sections/Appendix/Physics/DistanceData.tex
+++ b/sections/Appendix/Physics/DistanceData.tex
@@ -1,5 +1,10 @@
 \chapter{Data from distance test}
 
-\begin{tabular}{|c|}
+\begin{tabular}{c|c|c|c}
+Angle & Distance(m) & Difference & Difference \% \\ \hline
+5 	& 1.06	& -0.00667 & 0.04167\% \\ \hline
+% 5	& 1,06	& -0,006666667	0,004166667
+% 5	& 1,08	& 0,013333333	0,000177778	0,016666667
+% 
 
 \end{tabular}
