--- a/sections/Sensors/SensorTest.tex
+++ b/sections/Sensors/SensorTest.tex
@@ -42,7 +42,7 @@ clarifying the following points:
 % The testing will be divided into to two parts, one part is testing the two
 % distance sensors and the second part is testing the camera.
 
-\subsection{Ultrasonic Sensor Test - Setup}
+\subsection{Ultrasonic Sensor Test - Setup}\label{UltraTestSetup}
 The setup for testing the ultrasonic sensor consists of placing the turret on
 the floor along a wall, and pointing towards a target at varying distances along
 the wall. This wall is marked with a number of lines each representing a
@@ -113,15 +113,28 @@ large field of view. Therefore, the object should be wider rather than taller.
 \subsubsection{Additional Design notes}
 These tests also found the following conclusion:\nl
 
-\textbf{The sensor should not be placed close to the ground}\nl
-
-While testing it was determined that the sensor should not be placed close to
-the ground, as this resulted in a vast degredation of the data. Compared to the
-technical specification which stated that the maximum range is 255cm, this
-design resulted in a maximum distance of ~100cm.\nl
+The sensor should not be placed close to the ground. While testing it was
+determined that the sensor should not be placed close to the ground, as this
+resulted in a vast degredation of the data. Compared to the technical
+specification which stated that the maximum range is 255cm, this design resulted
+in a maximum distance of ~100cm.\nl
 
 \subsection{Ultrasonic Sensor Test - Distance}
-The data has been collected, but there is nothing here yet!
+The second test on the ultrasonic sensor is designed to determine the accuracy
+of the sensors measurements compared to the actual distance. As such, the test
+was conducted using test setup explained in \autoref{UltraTestSetup} using the
+two ultrasonic sensors. The measurements were done at varying distances with an
+interval of 25cm, and were measured 5 times at each distance. The results from
+this test is presented below in \autoref{UltDistTestDat}. The complete data sets
+can be found in \autoref{UltraDistTestData}.
+
+\dataTable{UltrasonicDistanceTestData}{Average measured distance compared to
+the actual distance.}{UltDistTestDat}
+
+
+\dataTable{SensorCamTest1}{Data from test 1. (With background)}{CamTest1}
+
+
 
 \subsection{Ultrasonic Sensor Test - Cone of Vision}
 The data has been collected, but there is nothing here yet!
@@ -192,7 +205,7 @@ been manually observed and written down. The test was done twice, once with a
 background of a contrasting colour, and one without. The results from the first
 test can be seen in \autoref{table:CamTest1}.
 
-\dataTable{SensorCamTest1}{Data from test 1. (With background)}{CamTest1}
+
 
 From the data presented in \autoref{table:CamTest1} we can conclude the
 following:
