--- a/sections/Appendix/TestResults/Test Data.tex
+++ b/sections/Appendix/TestResults/Test Data.tex
@@ -4,3 +4,4 @@ testing, which was not presented in that tests relevant chapter.
 
 \section{Ultrasonic Distance Test}\label{UltraDistTestData}
 
+\section{Ultrasonic Cone of Vision Test}\label{UltraConeTestData}
