--- a/sections/Sensors/SensorTest.tex
+++ b/sections/Sensors/SensorTest.tex
@@ -125,19 +125,24 @@ of the sensors measurements compared to the actual distance. As such, the test
 was conducted using test setup explained in \autoref{UltraTestSetup} using the
 two ultrasonic sensors. The measurements were done at varying distances with an
 interval of 25cm, and were measured 5 times at each distance. The results from
-this test is presented below in \autoref{UltDistTestDat}. The complete data sets
-can be found in \autoref{UltraDistTestData}.
+this test is presented below in \autoref{table:UltDistTestDat}. The complete
+data sets can be found in \autoref{UltraDistTestData}. 
 
 \dataTable{UltrasonicDistanceTestData}{Average measured distance compared to
-the actual distance.}{UltDistTestDat}
-
-\dataTable{SensorCamTest1}{Data from test 1. (With background)}{CamTest1}
-
+the actual distance.}{UltDistTestDat} 
 
 
 \subsection{Ultrasonic Sensor Test - Cone of Vision}
-The data has been collected, but there is nothing here yet!
+The third test is intended to determine the sensors cone of vision, that is, how
+far off to the side can an object be placed and still be able to be registered
+by the sensor. This test was conducted by placing the target at varying
+distances, and then moving the target off to the side ultil it could no longer
+be registered by any of the two sensors. The results from
+this test is presented below in \autoref{table:UltConeTestDat}. The complete
+data sets can be found in \autoref{UltraConeTestData}. 
 
+\dataTable{UltrasonicConeTestData}{Width of sensing for
+the ultrasonic sensors.}{UltConeTestDat}
 
 % The test of the ultrasonic sensor was divided into 4 different experiments, the
 % difference between the experiments are the size of the object being tracked and
