Et bud på hvordan platform choice kunne se ud :)

--- a/bib/lib.bib
+++ b/bib/lib.bib
@@ -65,3 +65,62 @@
   howpublished = {\url{https://www.moodle.aau.dk/pluginfile.php/837266/mod_resource/content/2/embedded-hardware-and-sensoractuators.pdf}}
 }
 
+
+@MISC{UNOSpecs,
+
+  title = {Arduino UNO technical specification},
+
+  note = {Seen 01/11/2016},
+
+  howpublished = {\url{https://www.arduino.cc/en/Main/ArduinoBoardUno}}
+
+}
+
+
+
+@MISC{NXTversions,
+
+  title = {Understanding the difference between nxt-versions},
+
+  note = {Seen 01/11/2016},
+
+  howpublished = {\url{http://robotsquare.com/2012/02/18/understanding-nxt-versions/}}
+
+}
+
+
+
+@MISC{ArduinoNXT,
+
+  title = {Connecting the NXT with an Arduino},
+
+  note = {Seen 01/11/2016},
+
+  howpublished = {\url{http://www.dexterindustries.com/howto/connect-the-arduino-and-the-lego-mindstorms-together/}}
+
+}
+
+
+
+@MISC{NXTShield,
+
+  title = {Connecting the NXT with an Arduino},
+
+  note = {Seen 01/11/2016},
+
+  howpublished = {\url{https://www.wayneandlayne.com/projects/bricktronics-shield/}}
+
+}
+
+
+
+@MISC{ArduinoIntro,
+
+  title = {Introduction to Arduino},
+
+  note = {Seen 01/11/2016},
+
+  howpublished = {\url{https://www.arduino.cc/en/Guide/Introduction}}
+
+}
+ 
